add A LOT OF options

--- a/src/pages/found/found.html
+++ b/src/pages/found/found.html
@@ -16,19 +16,42 @@
         <ion-item>
           <ion-label>Type</ion-label>
           <ion-select [(ngModel)]="type">
-            <ion-option value="phone">Phone</ion-option>
-            <ion-option value="wallet">Wallet</ion-option>
-            <ion-option value="vehicles">Vehicles</ion-option>
-            <ion-option value="VehiclesPartandAccessories">Vehicles Part and Accessories</ion-option>
-            <ion-option value="VehiclesEquipment">Vehicles Equipment</ion-option>
-            <ion-option value="DomesticAppliances">Domestic Appliances</ion-option>
-            <ion-option value="DecorationandFurniture">Decoration and Furniture</ion-option>
-            <ion-option value="ClothesandShoes">Clothes and Shoes</ion-option>
-            <ion-option value="AccessoriesandWatches">Accessories and Watches</ion-option>
-            <ion-option value="BuildindMaterialandTools">Buildind Material and Tools</ion-option>
-            <ion-option value="PhonesandAccessories">Phones and Accessories</ion-option>
-            <ion-option value="ComputerandAccessories">Consumer Electronic</ion-option>
-            <ion-option value="ComputerandAccessories">Computer and Accessories</ion-option>
+            <ion-option value="Bags">Bags</ion-option>
+            <ion-option value="Books">Books</ion-option>
+            <ion-option value="Bicycles">Bicycles</ion-option>
+            <ion-option value="Car">Car</ion-option>
+            <ion-option value="Carpets">Carpets</ion-option>
+            <ion-option value="Charger">Charger</ion-option>
+            <ion-option value="Clothes">Clothes</ion-option>
+            <ion-option value="Cups and Glasses">Cups and Glasses</ion-option>
+            <ion-option value="Computer">Computer</ion-option>
+            <ion-option value="Computer and Accessories">Computer and Accessories</ion-option>
+            <ion-option value="Decorative Goods">Decorative Goods</ion-option>
+            <ion-option value="Dishwasher">Dishwasher</ion-option>
+            <ion-option value="Garden Stuff">Garden Stuff</ion-option>
+            <ion-option value="Hats">Hats</ion-option>
+            <ion-option value="Helmets">Helmets</ion-option>
+            <ion-option value="Jewelry">Jewelry</ion-option>
+            <ion-option value="Jet Ski">Jet Ski</ion-option>
+            <ion-option value="Instruments">Instruments</ion-option>
+            <ion-option value="Kitchen Utensils">Kitchen Utensils</ion-option>
+            <ion-option value="Motorbike">Motorbike</ion-option>
+            <ion-option value="Phones">Phones</ion-option>
+            <ion-option value="Phones accessories">Phones accessories</ion-option>
+            <ion-option value="Scarf">Scarf</ion-option>
+            <ion-option value="Sofas and Beds">Sofas and Beds</ion-option>
+            <ion-option value="School Stuff">School Stuff</ion-option>
+            <ion-option value="Shoes">Shoes</ion-option>
+            <ion-option value="Sport Stuff">Sport Stuff</ion-option>
+            <ion-option value="Table and Chair">Table and Chair</ion-option>
+            <ion-option value="Tools">Tools</ion-option>
+            <ion-option value="Toy">Toy</ion-option>
+            <ion-option value="Vehicle Parts">Vehicle Parts</ion-option>
+            <ion-option value="Vehicles Equipment">Vehicles Equipment</ion-option>
+            <ion-option value="Wallets">Wallets</ion-option>
+            <ion-option value="Watches">Watches</ion-option>
+            <ion-option value="Wearing accessories">Wearing accessories</ion-option>
+            <ion-option value="Other">Other</ion-option>
           </ion-select>
         </ion-item>
 
@@ -243,19 +266,42 @@
         <ion-item>
           <ion-label>Type</ion-label>
           <ion-select [(ngModel)]="type">
-            <ion-option value="phone">Phone</ion-option>
-            <ion-option value="wallet">Wallet</ion-option>
-            <ion-option value="vehicles">Vehicles</ion-option>
-            <ion-option value="VehiclesPartandAccessories">Vehicles Part and Accessories</ion-option>
-            <ion-option value="VehiclesEquipment">Vehicles Equipment</ion-option>
-            <ion-option value="DomesticAppliances">Domestic Appliances</ion-option>
-            <ion-option value="DecorationandFurniture">Decoration and Furniture</ion-option>
-            <ion-option value="ClothesandShoes">Clothes and Shoes</ion-option>
-            <ion-option value="AccessoriesandWatches">Accessories and Watches</ion-option>
-            <ion-option value="BuildindMaterialandTools">Buildind Material and Tools</ion-option>
-            <ion-option value="PhonesandAccessories">Phones and Accessories</ion-option>
-            <ion-option value="ComputerandAccessories">Consumer Electronic</ion-option>
-            <ion-option value="ComputerandAccessories">Computer and Accessories</ion-option>
+            <ion-option value="Bags">Bags</ion-option>
+            <ion-option value="Books">Books</ion-option>
+            <ion-option value="Bicycles">Bicycles</ion-option>
+            <ion-option value="Car">Car</ion-option>
+            <ion-option value="Carpets">Carpets</ion-option>
+            <ion-option value="Charger">Charger</ion-option>
+            <ion-option value="Clothes">Clothes</ion-option>
+            <ion-option value="Cups and Glasses">Cups and Glasses</ion-option>
+            <ion-option value="Computer">Computer</ion-option>
+            <ion-option value="Computer and Accessories">Computer and Accessories</ion-option>
+            <ion-option value="Decorative Goods">Decorative Goods</ion-option>
+            <ion-option value="Dishwasher">Dishwasher</ion-option>
+            <ion-option value="Garden Stuff">Garden Stuff</ion-option>
+            <ion-option value="Hats">Hats</ion-option>
+            <ion-option value="Helmets">Helmets</ion-option>
+            <ion-option value="Jewelry">Jewelry</ion-option>
+            <ion-option value="Jet Ski">Jet Ski</ion-option>
+            <ion-option value="Instruments">Instruments</ion-option>
+            <ion-option value="Kitchen Utensils">Kitchen Utensils</ion-option>
+            <ion-option value="Motorbike">Motorbike</ion-option>
+            <ion-option value="Phones">Phones</ion-option>
+            <ion-option value="Phones accessories">Phones accessories</ion-option>
+            <ion-option value="Scarf">Scarf</ion-option>
+            <ion-option value="Sofas and Beds">Sofas and Beds</ion-option>
+            <ion-option value="School Stuff">School Stuff</ion-option>
+            <ion-option value="Shoes">Shoes</ion-option>
+            <ion-option value="Sport Stuff">Sport Stuff</ion-option>
+            <ion-option value="Table and Chair">Table and Chair</ion-option>
+            <ion-option value="Tools">Tools</ion-option>
+            <ion-option value="Toy">Toy</ion-option>
+            <ion-option value="Vehicle Parts">Vehicle Parts</ion-option>
+            <ion-option value="Vehicles Equipment">Vehicles Equipment</ion-option>
+            <ion-option value="Wallets">Wallets</ion-option>
+            <ion-option value="Watches">Watches</ion-option>
+            <ion-option value="Wearing accessories">Wearing accessories</ion-option>
+            <ion-option value="Other">Other</ion-option>
           </ion-select>
         </ion-item>
 
