dat huu truong fix html and css

--- a/src/pages/found/found.html
+++ b/src/pages/found/found.html
@@ -32,11 +32,10 @@
             <ion-option value="Hats">Hats</ion-option>
             <ion-option value="Helmets">Helmets</ion-option>
             <ion-option value="Jewelry">Jewelry</ion-option>
-            <ion-option value="Jet Ski">Jet Ski</ion-option>
             <ion-option value="Instruments">Instruments</ion-option>
             <ion-option value="Kitchen Utensils">Kitchen Utensils</ion-option>
             <ion-option value="Motorbike">Motorbike</ion-option>
-            <ion-option value="Phones">Phones</ion-option>
+            <ion-option value="Phone">Phone</ion-option>
             <ion-option value="Phones accessories">Phones accessories</ion-option>
             <ion-option value="Scarf">Scarf</ion-option>
             <ion-option value="Sofas and Beds">Sofas and Beds</ion-option>
@@ -282,11 +281,10 @@
             <ion-option value="Hats">Hats</ion-option>
             <ion-option value="Helmets">Helmets</ion-option>
             <ion-option value="Jewelry">Jewelry</ion-option>
-            <ion-option value="Jet Ski">Jet Ski</ion-option>
             <ion-option value="Instruments">Instruments</ion-option>
             <ion-option value="Kitchen Utensils">Kitchen Utensils</ion-option>
             <ion-option value="Motorbike">Motorbike</ion-option>
-            <ion-option value="Phones">Phones</ion-option>
+            <ion-option value="Phone">Phone</ion-option>
             <ion-option value="Phones accessories">Phones accessories</ion-option>
             <ion-option value="Scarf">Scarf</ion-option>
             <ion-option value="Sofas and Beds">Sofas and Beds</ion-option>
