--- a/src/pages/card-modal/card-modal.html
+++ b/src/pages/card-modal/card-modal.html
@@ -4,21 +4,39 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header >
 
-  <ion-navbar>
-    <ion-title>cardModal</ion-title>
+  <ion-navbar class="header-setting">
+    <button class="button-setting" (click)="closeModal()">
+      <ion-icon ios="ios-backspace-outline" md="md-backspace-outline"></ion-icon>
+    </button>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-  <img [src]="image">
-  <p>{{type}}</p>
-  <img [src]="src">
-  <button (click)="call(phone)">{{phone}}</button>
-  <p>{{phone}}</p>
-  <p>{{location}}</p>
-  <button (click)="closeModal()">close</button>
+<ion-content class="background-image">
+  <ion-grid class="grid-setting">
+    <ion-row align-self-stretch>
+      <img class="image-setting" [src]="image">
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-row><p><b class="bluemint">Type: </b>{{type}}</p></ion-row>
+        <ion-row> <p><b class="bluemint">Location: </b>{{location}}</p></ion-row>
+        <ion-row><p><b class="bluemint">Time: </b>{{datefrom}}</p></ion-row>
+      </ion-col>
+      <ion-col>
+        <button class="button-setting2" (click)="call(phone)">Contact</button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col><p><b class="bluemint">Description</b></p></ion-col>
+      <ion-col></ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col><p>{{content}}</p></ion-col>
+    </ion-row>
+
+  </ion-grid>
 </ion-content>
