--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{ 'LIST_MASTER_TITLE' | translate }}</ion-title>
+    <ion-title>PROFILE</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="logout()">
          <ion-icon ios="ios-log-out" md="md-log-out"></ion-icon>
@@ -11,15 +11,15 @@
 
 </ion-header>
 
-<ion-content>
+<ion-content class="background">
   <ion-list>
-    <ion-item-sliding *ngFor="let item of currentItems">
+    <ion-item-sliding class="background-item" *ngFor="let item of currentItems">
       <button ion-item (click)="openItem(item)">
         <ion-avatar item-start>
           <img [src]="item.profilePic" />
         </ion-avatar>
         <h2>{{item.name}}</h2>
-        <p>{{item.about}}</p>
+        <h3>{{item.about}}</h3>
         <ion-note item-end *ngIf="item.note">{{item.note}}</ion-note>
       </button>
 
