--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -35,7 +35,7 @@
         <button ion-button color="primary" block>{{ 'LOGIN_BUTTON' | translate }}</button>
       </div>
       <div padding-top padding-left padding-right >
-          <button ion-button icon-right block (click)="fblogin()">
+          <button class="facebook-button" ion-button icon-right block (click)="fblogin()">
             Login with
             <ion-icon name="logo-facebook"></ion-icon>
           </button>
